extends VBoxContainer



func _on_Button_pressed():
	get_tree().change_scene("res://Senjata/Info/RencongAcehInfo.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://Senjata/Info/PisoUritInfo.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Senjata/Info/KarihSumbarInfo.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://Senjata/Info/PedangJenawiInfo.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://Senjata/Info/PedangJenawikepriInfo.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisSiginjaiInfo.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisKeboInfo.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Senjata/Info/SiwarPanjangInfo.tscn")


func _on_Button9_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisRumbaiInfo.tscn")


func _on_Button10_pressed():
	get_tree().change_scene("res://Senjata/Info/BadikLampungInfo.tscn")


func _on_Button11_pressed():
	get_tree().change_scene("res://Senjata/Info/GolokjktInfo.tscn")


func _on_Button12_pressed():
	get_tree().change_scene("res://Senjata/Info/KujangBantenInfo.tscn")
